--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "angular": "^1.5.0",
-    "angular-ui-router": "ui-router#^0.2.18"
+    "angular-ui-router": "ui-router#^0.2.18",
+    "angular-ui-router.stateHelper": "^1.3.1"
   }
-
 }
